--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,35 +25,81 @@ body {
   -ms-flex-align: center;
   align-items: center; }
 
+form {
+  margin-bottom: 3rem; }
+  form input, form button {
+    font-family: 'Open Sans', sans-serif;
+    border-radius: 3px; }
+  form input, form select {
+    padding: .5rem;
+    border: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
+  form button {
+    cursor: pointer;
+    background-color: white;
+    border: 0;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    padding: .5rem;
+    transition: .1s box-shadow ease-in-out; }
+    form button:hover {
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
+
+.google progress.control::-webkit-progress-value {
+  background-color: #ddd; }
+.google progress.exposed::-webkit-progress-value {
+  background-color: #3369E8; }
+.google .green {
+  color: green; }
+.google .orange {
+  color: orange; }
+.google .red {
+  color: red; }
+
 figure {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  border-radius: 3px; }
+  border-radius: 3px;
+  margin: 0; }
   figure .perfect__header {
     padding: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.2); }
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
     figure .perfect__header--question {
       -webkit-flex: 1 0 60%;
       -ms-flex: 1 0 60%;
       flex: 1 0 60%; }
     figure .perfect__header--observed {
-      -webkit-flex: 1 0 20%;
-      -ms-flex: 1 0 20%;
-      flex: 1 0 20%; }
+      -webkit-flex: 1 0 10%;
+      -ms-flex: 1 0 10%;
+      flex: 1 0 10%;
+      text-align: center; }
+    figure .perfect__header--relative {
+      -webkit-flex: 1 0 10%;
+      -ms-flex: 1 0 10%;
+      flex: 1 0 10%;
+      text-align: center; }
     figure .perfect__header--range {
       -webkit-flex: 1 0 20%;
       -ms-flex: 1 0 20%;
-      flex: 1 0 20%; }
-  figure .perfect__answer {
+      flex: 1 0 20%;
+      text-align: center; }
+  figure .perfect__answer--copy {
+    -webkit-flex: 1 0 20%;
+    -ms-flex: 1 0 20%;
+    flex: 1 0 20%;
     padding: 1rem; }
-    figure .perfect__answer--copy {
-      -webkit-flex: 1 0 20%;
-      -ms-flex: 1 0 20%;
-      flex: 1 0 20%; }
-    figure .perfect__answer--split {
-      -webkit-flex: 1 0 40%;
-      -ms-flex: 1 0 40%;
-      flex: 1 0 40%; }
-      figure .perfect__answer--split progress {
+  figure .perfect__answer--split {
+    -webkit-flex: 1 0 40%;
+    -ms-flex: 1 0 40%;
+    flex: 1 0 40%;
+    padding: 1rem; }
+    figure .perfect__answer--split div {
+      position: relative; }
+      figure .perfect__answer--split div label {
+        position: absolute;
+        top: 0;
+        margin-left: 1rem;
+        font-weight: 300;
+        font-size: .8rem; }
+      figure .perfect__answer--split div progress {
         position: relative;
         -webkit-appearance: none;
         -moz-appearance: none;
@@ -63,44 +109,67 @@ figure {
         width: 100%;
         height: 1rem;
         margin: .25rem; }
-        figure .perfect__answer--split progress::-webkit-progress-bar {
-          background-color: white;
-          color: white; }
-        figure .perfect__answer--split progress::-webkit-progress-value {
-          background-color: blue; }
-        figure .perfect__answer--split progress::after {
-          content: attr(value);
-          position: absolute;
-          top: 0;
-          right: 1rem;
-          line-height: 1rem; }
-    figure .perfect__answer--observed {
-      -webkit-flex: 1 0 20%;
-      -ms-flex: 1 0 20%;
-      flex: 1 0 20%; }
-    figure .perfect__answer--range {
-      -webkit-flex: 1 0 20%;
-      -ms-flex: 1 0 20%;
-      flex: 1 0 20%; }
+        figure .perfect__answer--split div progress::-webkit-progress-bar {
+          background-color: transparent;
+          border-radius: 3px; }
+        figure .perfect__answer--split div progress::-webkit-progress-value {
+          background-color: rgba(0, 0, 0, 0.1);
+          border-radius: 3px;
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+  figure .perfect__answer--observed {
+    -webkit-flex: 1 0 10%;
+    -ms-flex: 1 0 10%;
+    flex: 1 0 10%;
+    padding: 1rem;
+    text-align: center;
+    font-size: 1.5rem; }
+  figure .perfect__answer--relative {
+    -webkit-flex: 1 0 10%;
+    -ms-flex: 1 0 10%;
+    flex: 1 0 10%;
+    padding: 1rem;
+    text-align: center;
+    font-size: 1.5rem; }
+  figure .perfect__answer--range {
+    -webkit-flex: 1 0 20%;
+    -ms-flex: 1 0 20%;
+    flex: 1 0 20%;
+    padding: 1rem;
+    text-align: center; }
+
+.google .green .essrange__val {
+  border: 2px solid green; }
+.google .orange .essrange__val {
+  border: 2px solid orange; }
+.google .red .essrange__val {
+  border: 2px solid red; }
 
 .essrange {
   height: 1rem;
   box-shadow: none;
   margin: 0;
   position: relative; }
+  .essrange__min {
+    position: relative; }
+    .essrange__min::after {
+      content: attr(display);
+      position: absolute;
+      top: 1rem;
+      right: -1rem;
+      font-size: .8rem; }
   .essrange__bar {
     -webkit-flex: 1 0 auto;
     -ms-flex: 1 0 auto;
     flex: 1 0 auto;
-    border-left: 2px solid #555;
-    border-right: 2px solid #555;
+    border-left: 2px solid rgba(0, 0, 0, 0.2);
+    border-right: 2px solid rgba(0, 0, 0, 0.2);
     position: relative; }
     .essrange__bar:after {
       content: '';
       height: 2px;
       position: absolute;
       width: 100%;
-      background-color: #555;
+      background-color: rgba(0, 0, 0, 0.2);
       left: 0;
       top: 50%; }
   .essrange__val {
@@ -108,6 +177,20 @@ figure {
     top: 0;
     width: 1rem;
     height: 1rem;
-    border: 2px solid green;
+    border: 2px solid rgba(0, 0, 0, 0.2);
     border-radius: 50%;
     background-color: white; }
+    .essrange__val::after {
+      content: attr(display);
+      position: absolute;
+      top: 1rem;
+      left: -50%;
+      font-size: .8rem; }
+  .essrange__max {
+    position: relative; }
+    .essrange__max::after {
+      content: attr(display);
+      position: absolute;
+      top: 1rem;
+      left: -.7rem;
+      font-size: .8rem; }
