Decimal places and styling tweaks

--- a/front/scss/app.scss
+++ b/front/scss/app.scss
@@ -24,6 +24,10 @@ body {
     align-items: center;
 }
 
+.controls {
+    margin-top: 1rem;
+}
+
 form {
     margin-bottom: 3rem;
     input, button {
