--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,24 +28,30 @@ body {
 .controls {
   margin-top: 1rem; }
 
+.chart-link {
+  margin-left: 1rem; }
+
+input, button {
+  font-family: 'Open Sans', sans-serif;
+  border-radius: 3px; }
+
+input, select {
+  padding: .5rem;
+  border: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
+
+button {
+  cursor: pointer;
+  background-color: white;
+  border: 0;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  padding: .5rem;
+  transition: .1s box-shadow ease-in-out; }
+  button:hover {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
+
 form {
   margin-bottom: 3rem; }
-  form input, form button {
-    font-family: 'Open Sans', sans-serif;
-    border-radius: 3px; }
-  form input, form select {
-    padding: .5rem;
-    border: 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
-  form button {
-    cursor: pointer;
-    background-color: white;
-    border: 0;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    padding: .5rem;
-    transition: .1s box-shadow ease-in-out; }
-    form button:hover {
-      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
 
 .google progress.control::-webkit-progress-value {
   background-color: #ddd; }
