--- a/front/scss/perfect.scss
+++ b/front/scss/perfect.scss
@@ -38,17 +38,17 @@ figure {
 
         &--observed {
             flex: 1 0 10%;
-            text-align: right;
+            text-align: center;
         }
 
         &--relative {
             flex: 1 0 10%;
-            text-align: right;
+            text-align: center;
         }
 
         &--range {
             flex: 1 0 20%;
-            text-align: right;
+            text-align: center;
         }
     }
 
