--- a/front/scss/perfect.scss
+++ b/front/scss/perfect.scss
@@ -103,14 +103,14 @@ figure {
         &--observed {
             flex: 1 0 10%;
             padding: 1rem;
-            text-align: right;
+            text-align: center;
             font-size: 1.5rem;
         }
 
         &--relative {
             flex: 1 0 10%;
             padding: 1rem;
-            text-align: right;
+            text-align: center;
             font-size: 1.5rem;
         }
 
