--- a/front/scss/perfect.scss
+++ b/front/scss/perfect.scss
@@ -2,6 +2,8 @@ figure {
     box-shadow: $shadow;
     border-radius: 3px;
     margin: 0;
+    background: #fefefe;
+    color: #000;
 
     .perfect__header {
         padding: 1rem;
