--- a/front/scss/app.scss
+++ b/front/scss/app.scss
@@ -8,6 +8,7 @@ $shadowup: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
 body {
     font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
 }
 
 .flex-col {
