More google styling

--- a/front/scss/errorrange.scss
+++ b/front/scss/errorrange.scss
@@ -4,6 +4,7 @@
     box-shadow: none;
     margin: 0;
     position: relative;
+    background: transparent;
 
     &__min {
         position: relative;
