Better control layout

--- a/front/scss/perfect.scss
+++ b/front/scss/perfect.scss
@@ -4,6 +4,7 @@ figure {
     margin: 0;
     background: #fefefe;
     color: #000;
+    margin-bottom: 10rem;
 
     .perfect__header {
         padding: 1rem;
