--- a/front/scss/app.scss
+++ b/front/scss/app.scss
@@ -27,6 +27,17 @@ body {
 
 .controls {
     margin-bottom: 1rem;
+
+    label {
+        padding: .5rem;
+        display: flex;
+        justify-content: space-between;
+        margin: 0 3rem;
+
+        input, select {
+            margin-left: 1rem;
+        }
+    }
 }
 
 .chart-link {
@@ -41,7 +52,7 @@ input, button {
 input, select {
     padding: .5rem;
     border: 0;
-    border-bottom: 1px solid rgba(0,0,0,.1);
+    border: 1px solid rgba(0,0,0,.1);
 }
 
 button {
