--- a/front/scss/perfect.scss
+++ b/front/scss/perfect.scss
@@ -7,29 +7,37 @@ figure {
     margin-bottom: 10rem;
 
     .perfect__header {
-        padding: 1rem;
+        padding: 1rem 0;
         border-bottom: 1px solid rgba(0,0,0,.2);
 
         &--question {
             flex: 1 0 60%;
+            padding: 0 1rem;
         }
 
         &--observed {
             flex: 1 0 10%;
             text-align: center;
+            padding: 0 1rem;
+
+            &.wider {
+                flex: 1 0 15%;
+            }
         }
 
         &--relative {
             flex: 1 0 10%;
             text-align: center;
+            padding: 0 1rem;
         }
 
         &--range {
             flex: 1 0 20%;
             text-align: center;
+            padding: 0 1rem;
 
             &.wider {
-                flex: 1 0 30%;
+                flex: 1 0 25%;
             }
         }
     }
@@ -87,6 +95,10 @@ figure {
             padding: 1rem;
             text-align: center;
             font-size: 1.5rem;
+
+            &.wider {
+                flex: 1 0 15%;
+            }
         }
 
         &--relative {
@@ -102,7 +114,7 @@ figure {
             text-align: center;
 
             &.wider {
-                flex: 1 0 30%;
+                flex: 1 0 25%;
             }
         }
     }
