Fix for small percentages, column headers, no Q: when there is no question

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -40,6 +40,9 @@ body {
     .controls label input, .controls label select {
       margin-left: 1rem; }
 
+.table-header label {
+  width: 12rem; }
+
 .chart-link {
   margin-left: 1rem; }
 
