--- a/front/scss/youtube.scss
+++ b/front/scss/youtube.scss
@@ -4,16 +4,14 @@
         color: #000;
         font-weight: 400;
     }
-    progress {
-        &.control {
-            &::-webkit-progress-value {
-                background-color: #e3e3e3;
-            }
+    .control {
+        .progress-value {
+            background-color: #e3e3e3;
         }
-        &.exposed {
-            &::-webkit-progress-value {
-                background-color: #e52d27;
-            }
+    }
+    .exposed {
+        .progress-value {
+            background-color: #e52d27;
         }
     }
 
