--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,33 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  font-weight: 300; }
+  font-weight: 300;
+  margin: 0; }
+
+header {
+  height: 5rem;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  background: white;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+  margin-bottom: 2rem; }
+  header .logo {
+    width: 10rem;
+    height: 5rem;
+    background-image: url(/img/logo.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center; }
+
+main {
+  margin: 1rem; }
 
 .flex-col {
   display: -webkit-flex;
@@ -21,10 +47,33 @@ body {
   -ms-flex-direction: row;
   flex-direction: row; }
 
+.flex-col {
+  -webkit-flex: 1 0;
+  -ms-flex: 1 0;
+  flex: 1 0;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+
 .align-middle {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center; }
+
+.csv-magic {
+  width: 100%;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
 
 .controls {
   margin-bottom: 1rem; }
@@ -40,38 +89,49 @@ body {
     .controls label input, .controls label select {
       margin-left: 1rem; }
 
+.control-panel {
+  padding: 1rem;
+  margin-bottom: 2rem;
+  border: 1px solid rgba(0, 0, 0, 0.1); }
+
 .table-header label {
   width: 12rem; }
 
 .chart-link {
   margin-left: 1rem; }
 
-input, button {
-  font-family: 'Open Sans', sans-serif;
-  border-radius: 3px; }
+input {
+  font-family: 'Open Sans', sans-serif; }
 
-input, select {
+input {
+  border: none;
+  padding: .5rem;
+  border: 1px solid rgba(0, 0, 0, 0.1); }
+
+select {
   padding: .5rem;
   border: 0;
   border: 1px solid rgba(0, 0, 0, 0.1); }
 
-button {
+.button {
   cursor: pointer;
   background-color: white;
+  color: black;
   border: 0;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   padding: .5rem;
-  transition: .1s box-shadow ease-in-out; }
-  button:hover {
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
+  margin: .25rem;
+  text-decoration: none;
+  border: 2px solid #00adbb; }
+  .button:hover {
+    background: #00adbb;
+    color: white; }
 
 figure {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 3px;
-  margin: 0;
   background: #fefefe;
   color: #000;
-  margin-bottom: 10rem; }
+  margin: .5rem; }
   figure .perfect__header {
     padding: 1rem 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
@@ -124,23 +184,6 @@ figure {
         margin-left: 1rem;
         font-weight: 300;
         font-size: .8rem; }
-      figure .perfect__answer--split div progress {
-        position: relative;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        border: none;
-        display: block;
-        width: 100%;
-        height: 1rem;
-        margin: .25rem; }
-        figure .perfect__answer--split div progress::-webkit-progress-bar {
-          background-color: transparent;
-          border-radius: 3px; }
-        figure .perfect__answer--split div progress::-webkit-progress-value {
-          background-color: rgba(0, 0, 0, 0.1);
-          border-radius: 3px;
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
   figure .perfect__answer--observed {
     -webkit-flex: 1 0 10%;
     -ms-flex: 1 0 10%;
@@ -169,6 +212,22 @@ figure {
       -webkit-flex: 1 0 25%;
       -ms-flex: 1 0 25%;
       flex: 1 0 25%; }
+
+.progress-container {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  width: 100%;
+  height: 1rem;
+  margin: .25rem;
+  background: transparent;
+  border-radius: 3px; }
+
+.progress-value {
+  display: block;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 3px; }
 
 .essrange {
   height: 1rem;
@@ -222,9 +281,9 @@ figure {
       left: -.7rem;
       font-size: .8rem; }
 
-.google progress.control::-webkit-progress-value {
+.google .control .progress-value {
   background-color: #ddd; }
-.google progress.exposed::-webkit-progress-value {
+.google .exposed .progress-value {
   background-color: #4285f4; }
 .google .perfect__header {
   background-color: #5f6165;
@@ -253,9 +312,9 @@ figure {
 
 .essence .perfect__header, .essence .perfect__answer--copy {
   font-family: Raleway,sans-serif; }
-.essence progress.control::-webkit-progress-value {
+.essence .control .progress-value {
   background-color: #939598; }
-.essence progress.exposed::-webkit-progress-value {
+.essence .exposed .progress-value {
   background-color: #00adbb; }
 .essence .green {
   color: green; }
@@ -275,9 +334,9 @@ figure {
   .youtube .perfect__header, .youtube .perfect__answer--copy {
     color: #000;
     font-weight: 400; }
-  .youtube progress.control::-webkit-progress-value {
+  .youtube .control .progress-value {
     background-color: #e3e3e3; }
-  .youtube progress.exposed::-webkit-progress-value {
+  .youtube .exposed .progress-value {
     background-color: #e52d27; }
   .youtube .green {
     color: green; }
