--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 * {
   box-sizing: border-box; }
 
@@ -350,3 +351,8 @@ figure {
     color: #e52d27; }
     .youtube .red .essrange__val {
       border: 2px solid #e52d27; }
+
+.japanese {
+  font-family: 'Noto Sans Japanese', sans-serif; }
+  .japanese .perfect__header, .japanese .perfect__answer--copy {
+    font-family: 'Noto Sans Japanese', sans-serif; }
