--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,7 +7,7 @@ body {
   font-weight: 300;
   margin: 0; }
 
-header {
+header.nav {
   height: 5rem;
   display: -ms-flexbox;
   display: flex;
@@ -18,7 +18,7 @@ header {
   background: white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
   margin-bottom: 2rem; }
-  header .logo {
+  header.nav .logo {
     width: 10rem;
     height: 5rem;
     background-image: url(/img/logo.png);
@@ -111,77 +111,77 @@ select {
     background: #00adbb;
     color: white; }
 
-figure {
+figure.perfect {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 3px;
   background: #fefefe;
   color: #000;
   margin: .5rem; }
-  figure .perfect__header {
+  figure.perfect .perfect__header {
     padding: 1rem 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
-    figure .perfect__header--question {
+    figure.perfect .perfect__header--question {
       -ms-flex: 1 0 60%;
       flex: 1 0 60%;
       padding: 0 1rem; }
-    figure .perfect__header--observed {
+    figure.perfect .perfect__header--observed {
       -ms-flex: 1 0 10%;
       flex: 1 0 10%;
       text-align: center;
       padding: 0 1rem; }
-      figure .perfect__header--observed.wider {
+      figure.perfect .perfect__header--observed.wider {
         -ms-flex: 1 0 15%;
         flex: 1 0 15%; }
-    figure .perfect__header--relative {
+    figure.perfect .perfect__header--relative {
       -ms-flex: 1 0 10%;
       flex: 1 0 10%;
       text-align: center;
       padding: 0 1rem; }
-    figure .perfect__header--range {
+    figure.perfect .perfect__header--range {
       -ms-flex: 1 0 20%;
       flex: 1 0 20%;
       text-align: center;
       padding: 0 1rem; }
-      figure .perfect__header--range.wider {
+      figure.perfect .perfect__header--range.wider {
         -ms-flex: 1 0 25%;
         flex: 1 0 25%; }
-  figure .perfect__answer--copy {
+  figure.perfect .perfect__answer--copy {
     -ms-flex: 1 0 20%;
     flex: 1 0 20%;
     padding: 1rem; }
-  figure .perfect__answer--split {
+  figure.perfect .perfect__answer--split {
     -ms-flex: 1 0 40%;
     flex: 1 0 40%;
     padding: 1rem; }
-    figure .perfect__answer--split div {
+    figure.perfect .perfect__answer--split div {
       position: relative; }
-      figure .perfect__answer--split div label {
+      figure.perfect .perfect__answer--split div label {
         position: absolute;
         top: 0;
         margin-left: 1rem;
         font-weight: 300;
         font-size: .8rem; }
-  figure .perfect__answer--observed {
+  figure.perfect .perfect__answer--observed {
     -ms-flex: 1 0 10%;
     flex: 1 0 10%;
     padding: 1rem;
     text-align: center;
     font-size: 1.5rem; }
-    figure .perfect__answer--observed.wider {
+    figure.perfect .perfect__answer--observed.wider {
       -ms-flex: 1 0 15%;
       flex: 1 0 15%; }
-  figure .perfect__answer--relative {
+  figure.perfect .perfect__answer--relative {
     -ms-flex: 1 0 10%;
     flex: 1 0 10%;
     padding: 1rem;
     text-align: center;
     font-size: 1.5rem; }
-  figure .perfect__answer--range {
+  figure.perfect .perfect__answer--range {
     -ms-flex: 1 0 20%;
     flex: 1 0 20%;
     padding: 1rem;
     text-align: center; }
-    figure .perfect__answer--range.wider {
+    figure.perfect .perfect__answer--range.wider {
       -ms-flex: 1 0 25%;
       flex: 1 0 25%; }
 
