--- a/src/chart.css
+++ b/src/chart.css
@@ -17,10 +17,12 @@
     border-bottom: 1px solid rgba(0,0,0,.2);
 }
 .sqc .sqc__h .sqc__h--question {
+    box-sizing: border-box;
     flex: 1 0 70%;
     padding: 0 1rem;
 }
 .sqc .sqc__h .sqc__h--range {
+    box-sizing: border-box;
     flex: 1 0 30%;
     padding: 0 1rem;
     text-align: center;
@@ -33,10 +35,12 @@
     align-items: center;
 }
 .sqc .sqc__a .sqc__a--title {
+    box-sizing: border-box;
     flex: 1 0 20%;
     padding: 1rem;
 }
 .sqc .sqc__a .sqc__a--bars {
+    box-sizing: border-box;
     flex: 1 0 50%;
     padding: 1rem;
 }
@@ -68,7 +72,8 @@
     border-radius: 3px;
 }
 .sqc .sqc__a .sqc__a--range {
-    flex: 1 0 20%;
+    box-sizing: border-box;
+    flex: 1 0 30%;
     padding: 1rem;
     text-align: center;
 }
