--- a/src/chart.css
+++ b/src/chart.css
@@ -53,6 +53,7 @@
 .sqc .sqc__a .sqc__a--bars .sqc__a__bars div label {
     position: absolute;
     bottom: 0;
+    margin: 0;
     margin-left: .5rem;
     font-weight: 300;
     font-size: .8rem
