--- a/src/chart.css
+++ b/src/chart.css
@@ -21,11 +21,19 @@
     flex: 1 0 70%;
     padding: 0 1rem;
 }
-.sqc .sqc__h .sqc__h--range {
+.sqc .sqc__h .sqc__h--numbers {
     box-sizing: border-box;
-    flex: 1 0 30%;
+    flex: 1 0 10%;
     padding: 0 1rem;
     text-align: center;
+    white-space: nowrap;
+}
+.sqc .sqc__h .sqc__h--range {
+    box-sizing: border-box;
+    flex: 1 0 20%;
+    padding: 0 1rem;
+    text-align: center;
+    white-space: nowrap;
 }
 /**
  * Chart answer
@@ -46,6 +54,18 @@
     flex: 1 0 50%;
     padding: .25rem;
 }
+.sqc .sqc__a .sqc__a--numbers {
+    box-sizing: border-box;
+    flex: 1 0 10%;
+    padding: .25rem;
+}
+.sqc .sqc__a .sqc__a--range {
+    box-sizing: border-box;
+    flex: 1 0 20%;
+    padding: .25rem;
+    text-align: center;
+}
+
 .sqc .sqc__a .sqc__a--bars .sqc__a__bars div {
     position: relative;
     display: flex;
@@ -91,11 +111,23 @@
     background-color: rgba(0,0,0,.1);
     border-radius: 3px;
 }
-.sqc .sqc__a .sqc__a--range {
-    box-sizing: border-box;
-    flex: 1 0 30%;
-    padding: .25rem;
-    text-align: center;
+.sqc__a__numbers-container {
+    height: 2.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: .5rem;
+}
+.sqc__a__numbers-container:first-child {
+    margin-top: .25rem;
+    margin-bottom: .5rem;
+}
+.sqc__a__numbers-container:last-child {
+    margin-top: .5rem;
+    margin-bottom: .25rem;
+}
+.sqc__a__numbers-container:only-child {
+    margin: .25rem;
 }
 .sqc__a__range--container {
     height: 2.2rem;
